@@ -1,27 +1,14 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.quantumwaveinterference;
 
-import edu.colorado.phet.common.phetcommon.view.util.FrameSetup;
-
-import javax.swing.*;
-import java.awt.*;
+import edu.colorado.phet.common.phetcommon.view.util.FrameSetup.CenteredWithSize;
 
 /**
- * User: Sam Reid
- * Date: Jul 17, 2006
- * Time: 9:30:18 AM
+ * QWI is shown at a different than default size for unknown reasons.
+ * //TODO: Try the default size
  */
-
-public class QWIFrameSetup implements FrameSetup {
-
-    public void initialize( JFrame frame ) {
-        int width = 912;
-        int height = 732;
-        Toolkit tk = Toolkit.getDefaultToolkit();
-        Dimension d = tk.getScreenSize();
-        int x = ( d.width - width ) / 2;
-        int y = 0;
-        frame.setLocation( x, y );
-        frame.setSize( width, height );
+public class QWIFrameSetup extends CenteredWithSize {
+    public QWIFrameSetup() {
+        super( 912, 732 );
     }
 }
